--- a/Loveman/Properties/Resources.resx
+++ b/Loveman/Properties/Resources.resx
@@ -175,4 +175,16 @@
   <data name="atom16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\atom16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="love48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\love48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lovr16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\lovr16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lovr32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\lovr32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lovr48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\lovr48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
