--- a/Loveman/Properties/Resources.resx
+++ b/Loveman/Properties/Resources.resx
@@ -187,4 +187,10 @@
   <data name="lovr48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\lovr48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lovr" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\lovr.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="love" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\love.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
