--- a/Loveman/Properties/Resources.resx
+++ b/Loveman/Properties/Resources.resx
@@ -193,4 +193,10 @@
   <data name="love" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\love.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lua16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lua16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_class" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\class.lua;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
