--- a/Loveman/Properties/Resources.resx
+++ b/Loveman/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="_class" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\class.lua;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="git16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\git16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
